PR/47584: Steffen Daoden: Add option to turn off Nagle to rlogin